--- a/index.Rmd
+++ b/index.Rmd
@@ -19,9 +19,9 @@ head(car.options)
 --- .custom
 
 Often times you find that you are stuck with car options that don't necessarily fit you need
-```{r}
-!("http://cdn.moneycrashers.com/wp-content/uploads/2014/07/zipcar-cars.png")
-```
+
+![Car Rental Figure](http://cdn.moneycrashers.com/wp-content/uploads/2014/07/zipcar-cars.png)
+
 
 --- .custom &custom
 
